sort.basic.bubble.AlgBubbleSort1.scala.error
Compilation error:
AlgBubbleSort1:2: error: illegal start of simple pattern
 var final:Boolean = true
     ^AlgBubbleSort1:3: error: '=' expected but ';' found.
def BubbleSort(){
^AlgBubbleSort1:7: error: illegal start of simple expression
  while (final== true){
         ^AlgBubbleSort1:19: error: ')' expected but '}' found.
}
^