sort.basic.bubble.AlgBubbleSort1.scala.code
 var final:Boolean = true
def BubbleSort(){

 

  while (final== true){
    for (i<- 0 to getNombreValeur()-2){
      if (plusPetit(i,i+1)==true){
        echange(i,i+1);
        final = true
      }
      else { 
        
        final = false
      }
    }
  }
}
